[project]
name = "weather-mcp-server"
version = "1.0.0"
description = "Weather MCP server using the Open-Meteo API — no API key required"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[project.scripts]
weather-mcp = "weather_server:mcp.run"

[project.urls]
Homepage = "https://github.com/rishi36/weather-mcp-server"
"Bug Tracker" = "https://github.com/rishi36/weather-mcp-server/issues"
